updated results api
